# AURAai

./: .env.example  .gitignore  DATA_MODEL.md  DEPLOYMENT.md  LICENSE  MIGRATIONS.md  Makefile  PRODUCTION.md  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_FINAL.md  RAILWAY_DEPLOY.md  README.md  SECURITY.md  docker-compose.yml  railway.frontend.json  railway.json
backend/: pyproject.toml
backend/app/: __init__.py  __main__.py  main.py
backend/app/agents/: agent.py  llm.py  memory.py  planner.py  state.py  stores.py  summarizer.py  tool_registry.py
backend/app/api/: router.py
backend/app/auth/: __init__.py  clerk.py  context.py  dependencies.py  roles.py  session.py
backend/app/config/: config.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  logging.py
backend/app/db/: __init__.py  redis.py  repositories.py  supabase.py
backend/app/middleware/: error_handler.py  request_context.py
backend/app/models/: domain.py
backend/app/observability/: __init__.py  setup.py
backend/app/prompts/: __init__.py  fashion.md  loader.py  planner.md  skin.md  stylist.md  system.md
backend/app/schemas/: __init__.py  agent.py  chat.py  color.py  common.py  recommendation.py  skin.py  upload.py  vto.py  youcam.py
backend/app/security/: __init__.py  headers.py  quota.py  rate_limit.py  sanitize.py  secrets.py  uploads.py
backend/app/services/: __init__.py  color_service.py  gemini_client.py  groq_client.py  history_service.py  llm_factory.py  privacy_service.py  recommendation_service.py  retention.py  skin_service.py  upload_service.py  vto_service.py  youcam_client.py
backend/app/storage/: object_store.py
backend/app/tools/: __init__.py  base.py  color_tool.py  memory_tool.py  recommendation_tool.py  skin_tool.py  vto_tool.py
backend/app/utils/: __init__.py  crypto.py  images.py  parsing.py
backend/app/workflows/: aura_graph.py
backend/supabase/: apply_all.sql
backend/supabase/migrations/: 0002_storage.sql  (+1 more)
backend/tests/: conftest.py
(+126 files in other folders)
