[tool.poetry]
name = "aura-ai-backend"
version = "0.1.0"
description = "AuraAI — Personal Skin & Style Agent. Autonomous AI stylist backend."
authors = ["AuraAI Team <team@aura-ai.dev>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
cryptography = "^43.0.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-groq = "^0.2.0"
langchain-google-genai = "^2.0.0"
google-generativeai = "^0.8.0"
supabase = "^2.9.0"
redis = "^5.1.0"
python-multipart = "^0.0.12"
tenacity = "^9.0.0"
structlog = "^24.4.0"
orjson = "^3.10.0"
# --- Auth & security ---
pyjwt = { extras = ["crypto"], version = "^2.9.0" }
# --- Observability (optional at runtime; guarded imports) ---
sentry-sdk = { extras = ["fastapi"], version = "^2.17.0" }
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-otlp-proto-http = "^1.27.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
# B008: `File()`/`Form()`/`Depends()` in defaults is the canonical FastAPI idiom.
# UP042/UP046: `str, Enum` and `Generic[T]` are intentional, portable patterns.
ignore = ["B008", "UP042", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
